--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nest-keycloak-connect",
-  "version": "1.6.0",
+  "name": "@fabong/nest-keycloak-connect",
+  "version": "1.7.0",
   "description": "keycloak-nodejs-connect module for Nest",
   "author": "John Joshua Ferrer <johnjoshuaferrer@disroot.org>",
   "license": "MIT",
@@ -21,7 +21,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/ferrerojosh/nest-keycloak-connect"
+    "url": "https://github.com/fabong/nest-keycloak-connect"
   },
   "bugs": "https://github.com/ferrerojosh/nest-keycloak-connect/issues",
   "peerDependencies": {
